[tool.poetry]
name = "lunardate-solardate-calculator"
version = "0.2.0"
description = ""
authors = ["Andrsion"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.4"
lunardate = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
