[project]
name = "lunardate-solardate-calculator"
version = "0.3.0"
description = "农历与公历日期重叠年份计算器"
authors = [
    { name = "Andrsion", email = "cornic@vip.qq.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flet>=0.27.1",
    "lunardate>=0.2.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
